clean up markup in some posts.

--- a/_posts/0278. generalized-move-to-music-game.html
+++ b/_posts/0278. generalized-move-to-music-game.html
@@ -9,7 +9,7 @@ title: Generalized Move to Music Game
 
 <p>In this game the player moves to music. Their score depends on how well their movement is synchronized with the music and on how many different moves they made. A more advanced version allows them to play along with the music though various delays will have to be overcome to enable their sounds to be sync'ed with the music. The system keeps track of their score and rewards improvement. Perhaps new tunes get <em>unlocked</em> like in DDR.</p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p>It should be easy for the teacher to make some movements (say reaching up) more valuable than others.</p>
 
@@ -30,7 +30,7 @@ title: Generalized Move to Music Game
 
 <p>The last piece is a tool to automatically determine the times that correspond to a given musical input. I believe we can do this with some simple signal processing. We should make it easy to create and annotate these so if we teacher wants to make a "Simon Says" sort of game with specified movements they can do that too. </p>
 
-<p><h4>Examples</h4></p>
+<h4>Examples</h4>
 
 <p>I see this working at Maze Day like this: We point a web-cam at the wall with (say) 4 targets arranged so they will be occluded when the child reaches out or up with their left and right arms (think of 9, 11, 1, and 3 on the clock). We play some tune with a strong beat like "YMCA" and they get scored when they obscure the targets on the beat. Perhaps we should have them touch the targets. Likewise we could set up a DDR pad for kids to step in time to the music or sit in the center and press with their hands. We could also have an Intellikeys keyboard setup with some tactile markers for kids who can't move around much. I bet we could have several kids play simultaneously to the same tune, thus reducing the noise.</p>
 
