--- a/_posts/0435. buttermilk-pancakes.html
+++ b/_posts/0435. buttermilk-pancakes.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2008/12/25/buttermilk-pancakes/
 tags: ''
 title: Buttermilk Pancakes
 ---
+<p>These pancakes are light and delicious.</p>
+
 <p>Dry Ingredients
 <ul>
 	<li>1 1/4 cup all-purpose flour</li>
