--- a/_posts/0617. connecting-a-dojo-data-grid-to-a-jsonreststore.html
+++ b/_posts/0617. connecting-a-dojo-data-grid-to-a-jsonreststore.html
@@ -11,4 +11,4 @@ title: Connecting a Dojo Data Grid to a JsonRestStore
 <!--more-->
 I wrote the little server using <a href="http://www.tornadoweb.org/">tornado</a> but I'm not using any special features of that package. </p>
 
-<p><script src="http://gist.github.com/302912.js"></script></p>
+<script src="http://gist.github.com/302912.js"></script>
