clean up errors made by my automatic conversion

--- a/_posts/0014. home-todo.html
+++ b/_posts/0014. home-todo.html
@@ -5,18 +5,17 @@ permalink: /~gb/blog/2006/10/05/home-todo/
 tags: ''
 title: Home ToDo
 ---
-<p><strong>Repairs</strong>
+<p><strong>Repairs</strong></p>
+
 <ol>
 	<li>Downstairs master bathroom vent</li>
 	<li>Stove Vent</li>
 	<li>Front outdoor faucet</li>
-        <li>Loose bricks on front steps</li>
-        <li>Replace bricks at electrical entrance</li>
-	<li>Level half-bath toilet and repair drain below</li>
 	<li>Heat exchanger drain upstairs need to separate emergency from main</li>
-</ol></p>
+</ol>
 
-<p><strong>Improvements</strong>
+<p><strong>Improvements</strong></p>
+
 <ol>
 	<li>Install fire extinguishers</li>
 	<li>Gravel drive</li>
@@ -24,4 +23,3 @@ title: Home ToDo
 	<li>Replace grass</li>
 	<li>Rear stair railing</li>
 </ol>
-</p>
