--- a/_posts/0015. home-todo-complete.html
+++ b/_posts/0015. home-todo-complete.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2006/10/05/home-todo-complete/
 tags: ''
 title: Home ToDo Complete
 ---
-<p><strong>Improvements</strong>
+<p><strong>Improvements</strong></p>
+
 <ol>
 	<li>Rekeyed doors (29 September 2005)</li>
 	<li>Wireless network (7 October 2005)</li>
@@ -49,11 +50,11 @@ title: Home ToDo Complete
 	<li>Complete coverage of crawlspace floor with plastic</li>
 	<li>Monitor crawlspace humidity</li>
 	<li>Install power vent (SmartVent) in crawlspace</li>
-	<li>Fill in beneath front porch so water doesn't go under there.</li></p>
+	<li>Fill in beneath front porch so water doesn't go under there.</li>
+</ol>
 
-<p></ol></p>
+<p><strong>Repairs</strong></p>
 
-<p><strong>Repairs</strong>
 <ol>
 	<li>Water heater (29 September 2005)</li>
 	<li>Dryer vent (30 September 2005)</li>
@@ -99,4 +100,7 @@ title: Home ToDo Complete
 	<li>Paint trim and siding (5 February 2008)</li>
 	<li>Open electrical boxes</li>
 	<li>Replaced water heater lower thermostat</li>
-</ol></p>
+        <li>Loose bricks on front steps</li>
+        <li>Replace bricks at electrical entrance</li>
+	<li>Level half-bath toilet and repair drain below</li>
+</ol>
