--- a/_posts/0022. blackberry-pie.html
+++ b/_posts/0022. blackberry-pie.html
@@ -5,8 +5,9 @@ permalink: /~gb/blog/2006/10/05/blackberry-pie/
 tags: ''
 title: Blackberry Pie
 ---
-<p>From <a href="http://pie.allrecipes.com/AZ/BlackberryPie.asp">http://pie.allrecipes.com/AZ/BlackberryPie.asp</a>
-<h2><span class="caps">INGREDIENTS</span>:</h2>
+<p>From <a href="http://pie.allrecipes.com/AZ/BlackberryPie.asp">http://pie.allrecipes.com/AZ/BlackberryPie.asp</a></p>
+
+<h2>INGREDIENTS</h2>
 <ul>
 	<li>4 cups fresh blackberries</li>
 	<li>1/2 cup white sugar</li>
@@ -15,8 +16,10 @@ title: Blackberry Pie
 	<li>2 tablespoons milk</li>
 	<li>1/4 cup white sugar</li>
 </ul>
-<h2><span class="caps">DIRECTIONS</span>:</h2>
-1. Combine 3 1/2 cups berries with the sugar and flour. Spoon the mixture into an unbaked pie shell. Spread the remaining 1/2 cup berries on top of the sweetened berries, and cover with the top crust. Seal and crimp the edges. Brush the top crust with milk, and sprinkle with 1/4 cup sugar.
-2. Bake at 425 degree F (220 degrees C) for 15 minutes. Reduce the temperature of the oven to 375 degrees F (190 degrees C), and bake for an additional 20 to 25 minutes.</p>
+<h2>DIRECTIONS</h2>
+<ol>
+<li>Combine 3 1/2 cups berries with the sugar and flour. Spoon the mixture into an unbaked pie shell. Spread the remaining 1/2 cup berries on top of the sweetened berries, and cover with the top crust. Seal and crimp the edges. Brush the top crust with milk, and sprinkle with 1/4 cup sugar.</li>
+<li>Bake at 425 degree F (220 degrees C) for 15 minutes. Reduce the temperature of the oven to 375 degrees F (190 degrees C), and bake for an additional 20 to 25 minutes.</li>
+</ol>
 
 <p>You can find some tips on pie baking here <a href="http://allrecipes.com/advice/coll/all/articles/438P1.asp">http://allrecipes.com/advice/coll/all/articles/438P1.asp</a>.</p>
