--- a/_posts/0026. grilled-pita.html
+++ b/_posts/0026. grilled-pita.html
@@ -5,13 +5,15 @@ permalink: /~gb/blog/2006/10/05/grilled-pita/
 tags: ''
 title: Grilled Pita
 ---
-<p>We like it with Hummus.
+<p>We like it with Hummus.</p>
+
 <ul>
 	<li>4 tsp. Olive oil.</li>
 	<li>1 clove of garlic, minced.</li>
 	<li>1/4 tsp. ground pepper.</li>
 	<li>1/4 tsp. Cumin.</li>
 </ul>
-In bowl combine above ingredients and brush on pita bread.
+
+<p>In bowl combine above ingredients and brush on pita bread.
 Grill over medium heat for approximately 11/2 to 2 min on each side or until lightly browned.
 Cut into wedges and serve with salad.</p>
