--- a/_posts/0028. oatmeal-cookies.html
+++ b/_posts/0028. oatmeal-cookies.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/10/05/oatmeal-cookies/
 tags: ''
 title: Oatmeal Cookies
 ---
+<p>I love oatmeal cookies!</p>
+
 <p>From <a href="http://www.cooks.com/rec/doc/0,171,157166%E2%80%93239206,00.html">http://www.cooks.com/rec/doc/0,171,157166–239206,00.html</a>
 <ul>
 	<li>1 cup flour</li>
