--- a/_posts/0029. orange-brownies.html
+++ b/_posts/0029. orange-brownies.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/10/05/orange-brownies/
 tags: ''
 title: Orange Brownies
 ---
+<p>An unusual twist on brownies.</p>
+
 <p><ul>
 	<li>1 1/2 cups all-purpose flour</li>
 	<li>2 cups sugar</li>
