--- a/_posts/0030. pizza-rustica.html
+++ b/_posts/0030. pizza-rustica.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/10/05/pizza-rustica/
 tags: ''
 title: Pizza Rustica
 ---
+<p>I haven't tried this but it sure looks good.</p>
+
 <p><ul>
 	<li>2 tablespoons olive oil</li>
 	<li>8 ounces hot Italian sausage, casings removed</li>
