--- a/_posts/0031. walnut-granola.html
+++ b/_posts/0031. walnut-granola.html
@@ -5,14 +5,17 @@ permalink: /~gb/blog/2006/10/05/walnut-granola/
 tags: ''
 title: Walnut Granola
 ---
-<p>Make homemade walnut granola: Mix together aproximately
+<p>Make homemade walnut granola.<p>
+
+<p>Mix together aproximately
 <ul>
 	<li>1/2 cup of honey,</li>
 	<li>3 to 4 tablespoons of blackstrap molasses,</li>
 	<li>a tablespoon of vanilla,</li>
 	<li>a dash of salt, and</li>
 	<li>a teaspoon each of your favorite spices, such as cinnamon, ginger and/or nutmeg.</li>
-</ul>
-Place 6–8 cups of rolled oats in a large bowl and toss to coat with the honey-blackstrap mixture. Then spread on a cookie sheet and bake at 275 degrees for 45 minutes. Cool and mix in 1/2 to 1 cup of walnuts.</p>
+</ul></p>
+
+<p>Place 6–8 cups of rolled oats in a large bowl and toss to coat with the honey-blackstrap mixture. Then spread on a cookie sheet and bake at 275 degrees for 45 minutes. Cool and mix in 1/2 to 1 cup of walnuts.</p>
 
 <p>From <a href="http://www.whfoods.com/genpage.php?tname=foodspice&dbid=99">http://www.whfoods.com/genpage.php?tname=foodspice&dbid=99</a></p>
