--- a/_posts/0032. grilled-salmon.html
+++ b/_posts/0032. grilled-salmon.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2006/10/05/grilled-salmon/
 tags: ''
 title: Grilled Salmon
 ---
-<p><span class="caps">MARINADE</span>:
+<p>Delicious for salmon on the grill.</p>
+
 <ul>
 	<li>2 tbsp. olive oil</li>
 	<li>1/4 c. onion, grated</li>
@@ -14,8 +15,8 @@ title: Grilled Salmon
 	<li>2 tbsp. Tamari soy sauce</li>
 	<li>1/8 tsp. freshly ground black pepper</li>
 	<li>1/2 tsp. paprika</li>
+	<li>1 lb. salmon fillet or 2 sm. salmon steaks</li>
 </ul>
-1 lb. salmon fillet or 2 sm. salmon steaks</p>
 
 <p>Combine marinade ingredients. Add salmon, turn to cover with marinade and stand at room temperature for 15 minutes. Brush grill rack with oil. Drain fish; save marinade. Cook on uncovered grill, directly over medium coals for 7 minutes. Turn with a spatula, brush with more marinade, and continue grilling 6 to 8 more minutes. (The fish should flake easily.) Serves 2.</p>
 
