--- a/_posts/0039. black-bean-cakes.html
+++ b/_posts/0039. black-bean-cakes.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/10/05/black-bean-cakes/
 tags: ''
 title: Black Bean Cakes
 ---
+<p>A bit like falafel with black beans</p>
+
 <p><ul>
 	<li>1 (15 ounce) can black beans, drained and rinsed</li>
 	<li>2 tablespoons vegetable broth or water or chicken broth</li>
@@ -24,7 +26,8 @@ title: Black Bean Cakes
 	<li>1 1/2 tablespoons plain nonfat yogurt</li>
 	<li>1 1/2 tablespoons low-fat sour cream</li>
 	<li>1/2 cup salsa (chose mild, medium or hot according to your tastes)</li>
-</ul>
+</ul></p>
+
 <ol>
 	<li>Place half the rinsed beans in a blender or food processor with the broth and puree into a paste. Add more liquid if needed. Mix together the bean paste with the reserved whole beans in a mixing bowl.</li>
 	<li>In a nonstick skillet, add the teaspoon of oil (or chorizo) onions, garlic, red pepper and jalapeno and cook for 3 or 4 minutes. Add the cumin and chili powder and continue to cook another minute. Romove from heat and let cool a bit.</li>
