--- a/_posts/0080. water-filter.html
+++ b/_posts/0080. water-filter.html
@@ -5,8 +5,9 @@ permalink: /~gb/blog/2006/11/18/water-filter/
 tags: ''
 title: Water Filter
 ---
-<p>Replaced with GE GXWH20F to get the mounting bracket on 10 January 2006
-New cartridge on:
+<p>Replaced with GE GXWH20F to get the mounting bracket on 10 January 2006</p>
+
+<p>New cartridge on:
 <ul>
 	<li>12 March 2006</li>
 	<li>08 June 2006 (too long, filter was failing)</li>
