--- a/_posts/0097. project-ideas-possibly-using-lsr.html
+++ b/_posts/0097. project-ideas-possibly-using-lsr.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/12/09/project-ideas-possibly-using-lsr/
 tags: ''
 title: Project Ideas possibly using LSR
 ---
+<p>Ideas for ET projects.</p>
+
 <p><ul>
 	<li>Game pad as a kid’s input device for a simpler screen reader interface. Might also be useful for people with cognitive disabilities. Screen readers are notorious for their steep learning curve and inappropriateness for use by children.</li>
 	<li>Watch and learn scripts. Screen reader scripts could adapt automatically to save users from lots of navigation. If the user always reads his unread messages when his email program starts, the script might offer to do that each time the program starts or to always do it. Scripts for mobility impairments could adapt to shorten lengthy key sequences.</li>
