--- a/_posts/0138. javascript-links.html
+++ b/_posts/0138. javascript-links.html
@@ -5,14 +5,17 @@ permalink: /~gb/blog/2007/01/10/javascript-links/
 tags: ''
 title: Javascript links
 ---
-<p>I've got to pickup JavaScript for some new projects. Jonah suggests the following links:
+<p>I've got to pickup JavaScript for some new projects. Jonah suggests the following links:</p>
+
 <ul>
 	<li><a href="http://www.w3schools.com/js/default.asp">JavaScript Tutorial</a></li>
 	<li><a href="http://www.visibone.com/regular-expressions/">JavaScript Regular Expressions</a></li>
 	<li><a href="http://javascript-reference.info/">JavaScript Reference</a></li>
 </ul>
-Some others I found:
+
+<p>Some others I found:</p>
+
 <ul>
 	<li><a href="http://www-128.ibm.com/developerworks/java/library/j-cb12196/?ca=dgr-lnxw01Javascript-Respect"> JavaScript's Language Features</a></li>
 	<li><a href="http://developer.mozilla.org/en/docs/JavaScript">Mozilla's JavaScript pages</a></li>
-</ul></p>
+</ul>
