--- a/_posts/0225. fixing-firefox-flash-foolishness.html
+++ b/_posts/0225. fixing-firefox-flash-foolishness.html
@@ -5,11 +5,12 @@ permalink: /~gb/blog/2007/06/08/fixing-firefox-flash-foolishness/
 tags: ''
 title: Fixing Firefox Flash Foolishness
 ---
-<p>Firefox is the only browser I use, so when things don't work, I get worried. We're looking at Flash as a delivery vehicle for some of our applications for people with disabilities and ran into two potential show stoppers:
+<p>Firefox is the only browser I use, so when things don't work, I get worried. We're looking at Flash as a delivery vehicle for some of our applications for people with disabilities and ran into two potential show stoppers:</p>
+
 <ol>
 	<li>Flash doesn't get focus unless you click on it with the mouse; many of our potential users don't use mice!</li>
 	<li>Flash doesn't allow access to right click; many switch interfaces generate left and right click events to signal the user pressing the mover or chooser switch.</li>
-</ol></p>
+</ol>
 
 <p>I surfed around a bit expecting to find some quick solution and only found despair. It seems that lots of people have encountered these problems in various forms and haven't found a solution.</p>
 
