--- a/_posts/0246. blueberry-sorbet.html
+++ b/_posts/0246. blueberry-sorbet.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2007/07/15/blueberry-sorbet/
 tags: ''
 title: Blueberry Sorbet
 ---
+<p>Good but I didn't like it as much as the strawberry.</p>
+
 <p><ul>
 	<li>20 ounces fresh blueberries</li>
 	<li>1/2 cup sugar syrup</li>
