--- a/_posts/0248. fit-pc-would-make-a-nice-et-platform.html
+++ b/_posts/0248. fit-pc-would-make-a-nice-et-platform.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2007/07/20/fit-pc-would-make-a-nice-et-platform/
 tags: ''
 title: fit-PC would make a nice ET platform
 ---
-<p>The <a href="http://www.linuxdevices.com/news/NS5551137361.html">fit-PC</a> looks like a very interesting platform for ET projects. It is cheap ($285), small (4.7x4.6x1.6 inches), low power (3 to 5 watts) and very capable:
+<p>The <a href="http://www.linuxdevices.com/news/NS5551137361.html">fit-PC</a> looks like a very interesting platform for ET projects. It is cheap ($285), small (4.7x4.6x1.6 inches), low power (3 to 5 watts) and very capable:</p>
+
 <ul>
 	<li>500 MHz AMD Geode LX800 processor</li>
 	<li>256 MB of DDR RAM</li>
@@ -16,4 +17,4 @@ title: fit-PC would make a nice ET platform
 	<li>Audio in/out interfaces</li>
 	<li>RS-232 serial port</li>
 	<li>Single 5V power supply</li>
-</ul></p>
+</ul>
