--- a/_posts/0342. strawberry-sorbet.html
+++ b/_posts/0342. strawberry-sorbet.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2008/02/09/strawberry-sorbet/
 tags: ''
 title: Strawberry Sorbet
 ---
+<p>Delicious sorbet and really easy to make.</p>
+
 <p><ul>
 	<li>2 (10-oz) pkgs frozen sliced strawberries in syrup, thawed</li>
 	<li>1/4 cup sugar</li>
