--- a/_posts/0018. yard-ideas.html
+++ b/_posts/0018. yard-ideas.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2006/10/05/yard-ideas/
 tags: ''
 title: Yard Ideas
 ---
-<p>I’d like to eliminate the grass. <strong>No</strong> grass!
+<p>I’d like to eliminate the grass. <strong>No</strong> grass!</p>
+
 <ul>
 	<li><a href="http://www.lesslawn.com/">Less Lawns</a></li>
 	<li><a href="http://eartheasy.com/grow_lawn_alternatives.htm">Lawn Alternatives</a></li>
@@ -14,13 +15,15 @@ title: Yard Ideas
 	<li><a href="http://www.bae.ncsu.edu/programs/extension/publicat/wqwm/ag508_2.html">Water Wise</a></li>
 	<li><a href="http://www.outsidepride.com/store/catalog/White-D-Clover-p-16701.html">Outside Pride</a> has clover seed and info</li>
 </ul>
-Other useful info:
+
+<p>Other useful info:</p>
+
 <ul>
 	<li><a href="http://plants.usda.gov/index.html">Plant Database</a></li>
 	<li><a href="http://www.dfr.state.nc.us/stewardship/stew_plantsforwildlife.htm">NC native plants useful for attracting birds</a></li>
 	<li><a href="http://ncnatural.com/wildflwr/flowrpg.html">Wildflowers and plants of NC</a></li>
 	<li><a href="http://www.ncwildflower.org/">NC Native Plant Society</a></li>
 	<li><a href="http://www.ncbg.unc.edu/">NC Botanical Gardens</a></li>
-</ul></p>
+</ul>
 
 <p><a href="http://www.ces.ncsu.edu/depts/hort/consumer/factsheets/vines/lonicera_sempervirens.html">Coral Honeysuckle vine (Lonicera sempervirens)</a> looks great. Blooms all summer with tubular red flowers that attract hummingbirds. </p>
