--- a/_posts/0036. fruit-and-honey-granola.html
+++ b/_posts/0036. fruit-and-honey-granola.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/10/05/fruit-and-honey-granola/
 tags: ''
 title: Fruit and Honey Granola
 ---
+<p>Delicious granola.</p>
+
 <p><ul>
 	<li>3 1/2 cups Quaker Oats (Quick or Old Fashioned, uncooked)</li>
 	<li>1/3 cup coarsely chopped pecans (optional)</li>
@@ -14,8 +16,9 @@ title: Fruit and Honey Granola
 	<li>1/2 teaspoon ground cinnamon</li>
 	<li>1/4 teaspoon salt (optional)</li>
 	<li>1 (6 ounce) package diced dried mixed fruit</li>
-</ul>
-<span class="caps">DIRECTIONS</span>:</p>
+</ul><p>
+
+<p>Directions</p>
 
 <p>1. Heat oven to 350 degrees F.
 2. In large bowl, combine oats and pecans; mix well. In small bowl, combine honey, margarine, vanilla, cinnamon and salt; mix well. Pour over oat mixture; mix well.  Spread evenly in 15×10-inch jelly roll pan or on rimmed baking sheet. 
