--- a/_posts/0078. sourdough-maple-walnut-bread.html
+++ b/_posts/0078. sourdough-maple-walnut-bread.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2006/11/17/sourdough-maple-walnut-bread/
 tags: ''
 title: Sourdough Maple Walnut Bread
 ---
-<p>A twist on a basic sourdough.
+<p>A twist on a basic sourdough.</p>
+
 <ul>
 	<li>3/4 cup sourdough starter</li>
 	<li>1/2 cup milk</li>
@@ -16,4 +17,6 @@ title: Sourdough Maple Walnut Bread
 	<li>3 1/3 cup whole wheat flour</li>
 	<li>1/3 cup walnuts, chopped</li>
 </ul>
+
+<p>
 Modified from the Bread Machine Cookbook IV by Donna Rathmell German.</p>
