--- a/_posts/0089. bread-pudding.html
+++ b/_posts/0089. bread-pudding.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2006/12/03/bread-pudding/
 tags: ''
 title: Bread Pudding
 ---
-<p>My modification of a recipe from http://southernfood.about.com/od/dessertsaucerecipes/r/bl80503c.htm
+<p>My modification of a recipe from http://southernfood.about.com/od/dessertsaucerecipes/r/bl80503c.htm</p>
+
 <ul>
 	<li>2 cups milk</li>
 	<li>3 eggs, beaten</li>
@@ -16,6 +17,7 @@ title: Bread Pudding
 	<li>1 teaspoon cinnamon</li>
 	<li>1/3 cup coconut</li>
 </ul>
-Heat milk 3.5 minutes in microwave until hot, but not boiling.  In a bowl, combine  eggs, sugar, and salt; stir well.  Gradually add about 1/4 of the hot  milk to the egg mixture and stir in.  Add remaining milk, stirring  constantly. Stir in vanilla.</p>
+
+<p>Heat milk 3.5 minutes in microwave until hot, but not boiling.  In a bowl, combine  eggs, sugar, and salt; stir well.  Gradually add about 1/4 of the hot  milk to the egg mixture and stir in.  Add remaining milk, stirring  constantly. Stir in vanilla.</p>
 
 <p>Place bread cubes in 2 quart baking dish sprayed with PAM. Mix coconut with bread. Pour the milk mixture over bread. Sprinkle cinnamon over pudding mixture. Bake, uncovered, at 300° for about 50 minutes, or until a knife inserted near the center comes out clean. Serve warm with vanilla sauce or other dessert sauce, if desired. Serves 6.</p>
