--- a/_posts/0127. salad-dressing.html
+++ b/_posts/0127. salad-dressing.html
@@ -5,6 +5,8 @@ permalink: /~gb/blog/2006/12/31/salad-dressing/
 tags: ''
 title: Salad Dressing
 ---
+<p>Claims to be like the dressing at Olive Garden</p>
+
 <p><ul>
 	<li>1/2 C. Mayonnaise</li>
 	<li>1/3 C. White Vinegar</li>
