--- a/_posts/0134. talking-word-processor.html
+++ b/_posts/0134. talking-word-processor.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2007/01/09/talking-word-processor/
 tags: ''
 title: Talking Word Processor
 ---
-<p>Talking with Karen and Gretchen they suggested a talking word processor with the following features.
+<p>Talking with Karen and Gretchen they suggested a talking word processor with the following features.</p>
+
 <ol>
 	<li>Runs in the browser</li>
 	<li>Allows switch, keyboard, and Braille input</li>
@@ -17,4 +18,5 @@ title: Talking Word Processor
 	<li>Record what the kid writes and allow it to be published as print, email, web, etc.</li>
 	<li>Record data.</li>
 </ol>
-Possibly build on the ideas from <a href="http://www.cs.unc.edu/Research/assist/et/2005/WebTyper.html">WebTyper</a>. Maybe Flash would be an appropriate for implementation.</p>
+
+<p>Possibly build on the ideas from <a href="http://www.cs.unc.edu/Research/assist/et/2005/WebTyper.html">WebTyper</a>. Maybe Flash would be an appropriate for implementation.</p>
