--- a/_posts/0135. text-adventure-writing-tool.html
+++ b/_posts/0135. text-adventure-writing-tool.html
@@ -5,7 +5,8 @@ permalink: /~gb/blog/2007/01/09/text-adventure-writing-tool/
 tags: ''
 title: Text Adventure Writing Tool
 ---
-<p>Suggested in a meeting with Karen and Gretchen. How about a text-adventure make-your-on-story tool that has simple text on screen and presents a kid with a first person adventure that allows them to make choices and construct a narrative as they go? Like the text-adventure games of old, you're given a starting scenario ("you're outside a house at the end of a road") and allows you to choose whether to enter the house or walk down the road. Ideas include:
+<p>Suggested in a meeting with Karen and Gretchen. How about a text-adventure make-your-on-story tool that has simple text on screen and presents a kid with a first person adventure that allows them to make choices and construct a narrative as they go? Like the text-adventure games of old, you're given a starting scenario ("you're outside a house at the end of a road") and allows you to choose whether to enter the house or walk down the road. Ideas include:</p>
+
 <ol>
 	<li>Reduce each step to a few choices</li>
 	<li>Simplify the text, present it on screen and read it out loud.</li>
@@ -19,6 +20,7 @@ title: Text Adventure Writing Tool
 	<li>Record data.</li>
 	<li>Do it in the browser?</li>
 </ol>
-Gretchen says check out <a href="http://www.inclusive.co.uk/catalogue/acatalog/choose_and_tell_nursery_rhymes.html">Choose & Tell Nursery Rhymes.</a></p>
+
+<p>Gretchen says check out <a href="http://www.inclusive.co.uk/catalogue/acatalog/choose_and_tell_nursery_rhymes.html">Choose & Tell Nursery Rhymes.</a></p>
 
 <p>In "<a href="http://www.amazon.com/Twisty-Little-Passages-Approach-Interactive/dp/0262633183/sr=8-1/qid=1168439091/ref=pd_bbs_sr_1/002-5405856-1994408?ie=UTF8&s=books">Twisty Little Passages: An Approach to Interactive Fiction</a>" by Nick Montfort he talks about "potential literature" embodied in literary machines. This seems to me just the idea we want to embody in this writing tool. He speaks of the author (of the interactive work) constructing narrative possibility rather than the narrative itself.</p>
