--- a/_posts/0653. configuring-virutalbox-to-connect-two-ubuntu-guests.html
+++ b/_posts/0653. configuring-virutalbox-to-connect-two-ubuntu-guests.html
@@ -3,7 +3,7 @@ categories: Ubuntu
 date: 2010/05/28 10:06:54
 permalink: /~gb/blog/2010/05/28/configuring-virutalbox-to-connect-two-ubuntu-guests/
 tags: ''
-title: Configuring VirutalBox to connect two Ubuntu guests
+title: Configuring VirtualBox to connect two Ubuntu guests
 ---
 <p>For testing on our <a href="https://sites.google.com/site/uncopenweb/">UOW</a> project I needed two virtual machines each running Ubuntu and nginx to be able to talk to one another and the outside world without interfering with the server already running on port 80 on my machine. </p>
 
