--- a/_posts/0034. grandma-dixons-ice-cream.html
+++ b/_posts/0034. grandma-dixons-ice-cream.html
@@ -5,9 +5,12 @@ permalink: /~gb/blog/2006/10/05/grandma-dixons-ice-cream/
 tags: ''
 title: Grandma Dixon's Ice Cream
 ---
-<p>2 eggs
-1 cup sugar
-1 can evap milk
-1 can water
-1 tsp vanilla
-cook until spoon is coated, cool, and freeze</p>
+<ul>
+<li>2 eggs</li>
+<li>1 cup sugar</li>
+<li>1 can evap milk</li>
+<li>1 can water</li>
+<li>1 tsp vanilla</li>
+</ul>
+
+<p>Cook until spoon is coated, cool, and freeze</p>
