--- a/_posts/0180. cinnamon-raisin-scones.html
+++ b/_posts/0180. cinnamon-raisin-scones.html
@@ -11,33 +11,37 @@ title: Cinnamon Raisin Scones
 
 <p><!--more--></p>
 
-<p>2 cups all-purpose flour
-1/3 cup sugar
-1 tablespoon baking powder
-1 teaspoon cinnamon
-1/4 teaspoon salt
-1/2 cup butter or margarine
-2/3 cup milk
-1 beaten egg
-1 teaspoon vanilla extract
-1 cup Sun-Maid Natural Raisins</p>
+<ul>
+<li>2 cups all-purpose flour</li>
+<li>1/3 cup sugar</li>
+<li>1 tablespoon baking powder</li>
+<li>1 teaspoon cinnamon</li>
+<li>1/4 teaspoon salt</li>
+<li>1/2 cup butter or margarine</li>
+<li>2/3 cup milk</li>
+<li>1 beaten egg</li>
+<li>1 teaspoon vanilla extract</li>
+<li>1 cup Sun-Maid Natural Raisins</li>
+</ul>
 
-<p>HEAT oven to 400 F (I used 375 convection)</p>
+<ol>
+<li>HEAT oven to 400 F (I used 375 convection)</li>
 
-<p>COMBINE flour, sugar, baking powder, cinnamon and salt.</p>
+<li>COMBINE flour, sugar, baking powder, cinnamon and salt.</li>
 
-<p>Using pastry blender or fork, CUT IN butter until mixture resembles coarse crumbs.</p>
+<li>Using pastry blender or fork, CUT IN butter until mixture resembles coarse crumbs.</li>
 
-<p>COMBINE milk, egg and vanilla.</p>
+<li>COMBINE milk, egg and vanilla.</li>
 
-<p>ADD to flour mixture; stir until dry ingredients are moistened.</p>
+<li>ADD to flour mixture; stir until dry ingredients are moistened.</li>
 
-<p>STIR in raisins.</p>
+<li>STIR in raisins.</li>
 
-<p>With floured hands, SHAPE dough into 8-inch round on ungreased cookie sheet.</p>
+<li>With floured hands, SHAPE dough into 8-inch round on ungreased cookie sheet.</li>
 
-<p>SPRINKLE with additional sugar, if desired.</p>
+<li>SPRINKLE with additional sugar, if desired.</li>
 
-<p>CUT dough into 8 wedges; slightly separate wedges.</p>
+<li>CUT dough into 8 wedges; slightly separate wedges.</li>
 
-<p>BAKE at 400 F for 15 to 20 minutes. Serve warm. (17 minutes seemed right)</p>
+<li>BAKE at 400 F for 15 to 20 minutes. Serve warm. (17 minutes seemed right)</li>
+</ol>
