--- a/_posts/0187. walnut-raisin-scones.html
+++ b/_posts/0187. walnut-raisin-scones.html
@@ -7,7 +7,7 @@ title: Walnut Raisin Scones
 ---
 <p>Great subtle flavor and the dough is much easier to handle than my last attempt. </p>
 
-<p><!--more--></p>
+<!--more-->
 
 <ul>
 	<li>1 cup all-purpose flour</li>
