--- a/_posts/0370. eastern-nc-bbq-sauce.html
+++ b/_posts/0370. eastern-nc-bbq-sauce.html
@@ -7,11 +7,12 @@ title: Eastern NC BBQ Sauce
 ---
 <p>From: http://fp.enter.net/~rburk/sauce-rub-marinade/barbecuesauce/easternn.txt</p>
 
-<p>1 cup White vinegar
-1 cup Cider vinegar
-1 tablespoon Sugar
-1 tablespoon Crushed red pepper flakes
-1 tablespoon Tabasco sauce
-Salt to taste
-Freshly cracked black pepper to taste
-</p>
+<ul>
+<li>1 cup White vinegar</li>
+<li>1 cup Cider vinegar</li>
+<li>1 tablespoon Sugar</li>
+<li>1 tablespoon Crushed red pepper flakes</li>
+<li>1 tablespoon Tabasco sauce</li>
+<li>Salt to taste</li>
+<li>Freshly cracked black pepper to taste</li>
+</ul>
