--- a/_posts/0180. cinnamon-raisin-scones.html
+++ b/_posts/0180. cinnamon-raisin-scones.html
@@ -9,7 +9,7 @@ title: Cinnamon Raisin Scones
 
 <p>From <a href="http://www.sunmaid.com/recipes/recipe/Cinnamon_raisin_scone.html">Sun-Maid Recipes</a></p>
 
-<p><!--more--></p>
+<!--more-->
 
 <ul>
 <li>2 cups all-purpose flour</li>
