fix bad breaks.

--- a/_posts/0156. 3-step-guide-to-installing-lush-on-windows.html
+++ b/_posts/0156. 3-step-guide-to-installing-lush-on-windows.html
@@ -7,7 +7,8 @@ title: 3 step guide to installing Lush on Windows
 ---
 <p>Could be applied to lots of Linux apps. <a href="http://sourceforge.net/forum/message.php?msg_id=3874468">http://sourceforge.net/forum/message.php?msg_id=3874468</a></p>
 
-<p><!--more-->
+<!--more-->
+<pre>
 Step 1 - Downloads 
 ------------------ 
 Download and install vmplayer (free virtual machine software) 
@@ -27,4 +28,4 @@ Search for lush, mark lush package for installation
 Search for build-essential, mark build-essential package for installation 
 Click Apply 
  
-That's it! vmplayer will also save any changes back to the image file. </p>
+That's it! vmplayer will also save any changes back to the image file. </pre>
