--- a/_posts/0165. dtl-derive-to-latex-conversion.html
+++ b/_posts/0165. dtl-derive-to-latex-conversion.html
@@ -7,7 +7,7 @@ title: 'DtL: Derive to Latex Conversion'
 ---
 <p>This page describes a little utility I wrote for my own use. If you want to use it, you can download it and its source. I don’t provide support but if you would like to report bugs you’ve found or changes you’ve made to it, I’d be happy to hear about it.</p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p><a href="http://www.derive.com/">Derive</a> is a symbolic math package for the PC from Soft Warehouse (now <a href="http://education.ti.com/us/product/software/derive/features/features.html">Texas Instruments</a>). The first version I used ran on DOS and even worked on my HP100 palmtop. The current version works on Windows. It isn’t the best known symbolic math package but I really like it. I have Mathematica, Macsyma, the Matlab Symbolic Toolbox, and Maple but I still prefer to use Derive. I like the menu-driven user interface and the intuitive operation. It’s not because I used Derive first either; I actually was a heavy Macsyma user for years before I discovered Derive.</p>
 
