--- a/_posts/0166. target-issues-for-a-web-cam-switch.html
+++ b/_posts/0166. target-issues-for-a-web-cam-switch.html
@@ -13,7 +13,7 @@ title: Target issues for a web-cam switch
 	<li>They must have an associated key, mouse or other event to control the computer.</li>
 </ol></p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p>Many users will have useful vision so the targets can't simply be bulls eyes like I'm using now. All I need for the computer is some texture that looks different from hand, head, or whatever that will obscure it. I believe printed words in a really large font should work fine for example. Textured patches should be fine. Solid patches aren't so good. For the computer's purposes the targets don't have to be different, their physical arrangement should be sufficient to distinguish them.</p>
 
