--- a/_posts/0170. ctypes-tricks.html
+++ b/_posts/0170. ctypes-tricks.html
@@ -7,7 +7,7 @@ title: ctypes tricks
 ---
 <p>A few tricks I learned using ctypes to wrap OpenCV.</p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p></strong>Easy function prototypes</strong></p>
 
