--- a/_posts/0202. hark-the-sound-statistics.html
+++ b/_posts/0202. hark-the-sound-statistics.html
@@ -13,7 +13,7 @@ title: Hark the Sound Statistics
 
 <p>Hark has been downloaded by IP addresses in 70 countries and 46 US States. The countries I can identify include:</p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p>A total of 421 to these countries:</p>
 
