--- a/_posts/0263. master-shower-leaks.html
+++ b/_posts/0263. master-shower-leaks.html
@@ -7,7 +7,7 @@ title: Master shower leaks
 ---
 <p>Our new (to us 2 years ago) house came with a large (maybe 36 square feet of floor) tiled shower in the master bath. The inspector warned me that it leaked but I hoped it was simply a problem with the plumbing. I tested the shower pan by sealing the drain and filling the pan with water drawn from elsewhere in the house. It leaked! Water ran under the house. The <em>right</em> thing to do would be to tear it out and replace it but that will be a major undertaking. I wondered if there was something I could do that would delay this major bill? How about coating the floor and bottom rows of tile up to the bench with <a href="http://www.chargar.com/Products/prod_na.html">Epoxy Waterproofer</a>? We decided to try it. </p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p>We bought 2 gallons of epoxy and a "Limestone" gray <em>(this color was a mistake see the update at the bottom)</em> color pack for a total cost of $143. It arrived very quickly via UPS. This is a two-part epoxy with a small container of coloring agent. Both parts are surprisingly thick, like gel. We had prepared with disposable measuring cups expecting to pour the two parts into the disposable mixing buckets we bought. Instead we ended up dipping the contents into plastic drinking cups using plastic spoons.</p>
 
