--- a/_posts/0268. new-curriculum-requirements-by-course.html
+++ b/_posts/0268. new-curriculum-requirements-by-course.html
@@ -9,7 +9,7 @@ title: New Curriculum Requirements by Course
 
 <p>So, I wrote a short python script to scrape the data off the <a href="http://www.unc.edu/ugradbulletin/requirements.html">requirements page from the bulletin</a>. Here is the output of that script for quick reference without requiring a 3270.</p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p><strong>Updated for the 2008/2009 record.</strong></p>
 <pre>
