--- a/_posts/0298. python-file-like-object-for-use-with-print-in-pygame.html
+++ b/_posts/0298. python-file-like-object-for-use-with-print-in-pygame.html
@@ -7,7 +7,7 @@ title: Python file-like object for use with print in pygame
 ---
 <p>I wanted my print output to show up on <a href="http://www.pygame.org/news.html">pygame</a> display. This python code implements a simple file-like object that handles multiple lines and wrapping.</p>
 
-<p><!--more--></p>
+<!--more-->
 <pre>
 <code>
 '''Make print work on a pygame Surface'''
