--- a/_posts/0329. maze-day-2008.html
+++ b/_posts/0329. maze-day-2008.html
@@ -7,14 +7,7 @@ title: Maze Day 2008
 ---
 <p>Maze Day is for visually impaired and blind students in grades K-12, their parents and teachers. Your students will enjoy fun and educational computer applications developed especially for them. UNC students will learn how well their accessible applications work with real users. And everyone will have a good time!</p>
 
-<p><!--more-->
-<div class="right">
-<?php
-   if (function_exists('generateRandomImgTag'))
-   {
-      generateRandomImgTag('class="right" alt="A random Maze Day Picture" width="30%"');
-   }
-?></div></p>
+<!--more-->
 
 <p>This year, in addition to many of the old favorites, we expect to have many amazing new activities, including:<ul>
 	<li>Composing music on the DDR pad.</li>
