--- a/_posts/0334. serialkeys-for-os-x.html
+++ b/_posts/0334. serialkeys-for-os-x.html
@@ -9,7 +9,7 @@ title: SerialKeys for OS X
 
 <p>SerialKeysX is an implementation of the <a href="http://support.microsoft.com/kb/260517/EN-US/">SerialKeys</a> protocol for <a href="http://www.apple.com/macosx/">Apple's OS X operating system</a>. It allows control of the computer's keyboard and mouse over a serial connection from devices such as the <a href="http://www.eyegaze.com/">EyeGaze</a> and other <a href="http://www.abilityhub.com/aac/aac-devices.htm">augmented communication devices</a>. You may download and use the software for free.</p>
 
-<p><!--more--></p>
+<!--more-->
 
 <p>Note that SerialKeysX has been tested with OS X 10.5. We believe it should also work with OS X 10.4 (Tiger). Please let us know if it works for you with some other configuration. We also believe we can build a version that works on OS X 10.3, let us know if you need it.</p>
 
