--- a/_posts/0561. project-ideas-for-wiimote-enabled-firefox.html
+++ b/_posts/0561. project-ideas-for-wiimote-enabled-firefox.html
@@ -7,7 +7,7 @@ title: Project Ideas for Wiimote Enabled Firefox
 ---
 <p>I'm thinking of things we can do with the nearly ready Wiimote (and Balance Board) capability in our Outfox extension. We can use the accelerometers, IR camera, buttons, and rumble. I'm going to list game/activity ideas so I can recruit some help.</p>
 
-<p><!--more-->
+<!--more-->
 <ol>
 	<li>Duck Hunt: use the Wiimote as the gun.</li>
 	<li>Spelling of the Dead: Spell the word by blasting zombies that are labelled with letters.</li>
