--- a/_posts/0612. maze-day-2010.html
+++ b/_posts/0612. maze-day-2010.html
@@ -7,7 +7,7 @@ title: Maze Day 2010
 ---
 <p>Maze Day is for visually impaired and blind students in grades K-12, their parents and teachers. Your students will enjoy fun and educational computer applications developed especially for them. UNC students will learn how well their accessible applications work with real users. And everyone will have a good time!</p>
 
-<p><!--more-->
+<!--more-->
 We plan to have a wide variety of accessible fun, educational, and exercise activities including: (preliminary)
 <ul>
 	<li>Many new prototypes for games</li>
