--- a/_posts/0617. connecting-a-dojo-data-grid-to-a-jsonreststore.html
+++ b/_posts/0617. connecting-a-dojo-data-grid-to-a-jsonreststore.html
@@ -2,7 +2,7 @@
 categories: Programming
 date: 2010/01/31 15:53:35
 permalink: /~gb/blog/2010/01/31/connecting-a-dojo-data-grid-to-a-jsonreststore/
-tags: Dojo, tornado, python, javascript
+tags: dojo, tornado, python, javascript
 title: Connecting a Dojo Data Grid to a JsonRestStore
 ---
 <p>I looked high and low and couldn't find a working example of connecting a <a href="http://docs.dojocampus.org/dojox/grid/DataGrid">dojox.grid.DataGrid</a> to a <a href="http://docs.dojocampus.org/dojox/data/JsonRestStore">dojox.data.JsonRestStore</a> so I puzzled out parts of it myself. This code probably has errors and omissions but it seems to work for me with dojo 1.4.1. </p>
