--- a/_posts/1002. no-news-is-good-news.html
+++ b/_posts/1002. no-news-is-good-news.html
@@ -1,6 +1,6 @@
 ---
 title: No news is good news!
-permalink: no-news-is-good-news
+permalink: /~gb/blog/2010/12/23/no-news-is-good-news
 date: 2011/01/06 14:04:12
 tags: random, programming, python
 ---
